CATL-939: Fix Scroll Style so Additional Columns can be Seen
Fixed width of 1400px was being used to generate the scroll bar, which is the
width the dashboard table would have with default columns. Added columns would
increase the table's size to over 1400px, but the scroll bar would only be
able to show the first 1400px, independently of actual table width.

Fixed by dynamically calculating table size and refreshing scrollbar inner
size on cases array change.

--- a/css/caseList.css
+++ b/css/caseList.css
@@ -315,7 +315,7 @@
   color: #FFF;
 }
 #bootstrap-theme :not(.viewing-case) .scrolling table.case-list-table {
-  width: 1400px;
+  width: 100%;
 }
 #bootstrap-theme :not(.viewing-case) .scrolling .custom-scroll-wrapper {
   border: none;
@@ -326,7 +326,7 @@
 }
 #bootstrap-theme :not(.viewing-case) .scrolling .custom-scroll-wrapper .custom-scroll{
   height: 1px;
-  width: 1400px;
+  width: 100%;
 }
 #bootstrap-theme :not(.viewing-case) .scrolling .custom-scroll-wrapper.affix {
   position: fixed;
